--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 .DS_Store
 
 .prettierignore
+style-guide.md
+README.md
+README-template.md
+design/mobile-design.jpg
+design/desktop-preview.jpg
+design/desktop-design.jpg
+design/active-states.jpg
